# stm32f746g-disco

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  preprocessed.c  stm32f746nghx_flash.ld
CoGen/: CoGen.ioc
CoGen/Core/: cubemx-sources.cmake
CoGen/Core/Inc/: main.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h
CoGen/Core/Src/: dac.c  dma.c  freertos.c  gpio.c  i2c.c  iwdg.c  ltdc.c  main.c  sdmmc.c  stm32f7xx_it.c  tim.c  usart.c
Drivers/BSP/: CMakeLists.txt
Drivers/BSP/STM32746G-Discovery/: stm32746g_discovery_lcd.c
Drivers/CMSIS/: CMakeLists.txt
Drivers/CMSIS/Device/ST/STM32F7xx/Source/Templates/gcc/linker/: stm32f746nghx_flash.ld
Drivers/FatFs/: CMakeLists.txt
Drivers/FatFs/src/: ffconf.h
Drivers/FatFs/src/customDrivers/: sd_diskio_dma.c
Drivers/FatFs/src/drivers/: sd_diskio_dma.h  sd_diskio_dma_rtos.h
Drivers/FreeRTOS-Plus-CLI/: CMakeLists.txt
Drivers/STM32F7xx_HAL_Driver/: CMakeLists.txt
Drivers/STM32_USB_Device_Library/: CMakeLists.txt
Drivers/STM32_USB_Device_Library/Class/MSC/Inc/: usbd_msc_storage.h
Drivers/STM32_USB_Device_Library/Class/MSC/Src/: usbd_msc_storage.c
Drivers/STM32_USB_Device_Library/Core/Inc/: usbd_conf.h  usbd_desc.h
Drivers/STM32_USB_Device_Library/Core/Src/: usbd_conf.c
Drivers/lvgl-9.2.2/: lv_conf.h
Drivers/lvgl-9.2.2/env_support/cmake/: custom.cmake
Src/: ESG.cpp  ESG.hpp  FreeRTOSConfig.h  Main.cpp  Main.hpp  OsTasks.cpp  OsTasks.h  app-sources.cmake  config.h  gpio_cfg.h  lv_conf.h  main.cpp  sources.cmake  stm32f7xx_hal_conf.h  uart_log.h
Src/DAC/: DacDriver.cpp  DacDriver.hpp
Src/FatFS/: FatFsWrapper.cpp  FatFsWrapper.hpp
Src/FreeRTOS/: CHANGES.txt  Commands.cpp  Commands.hpp  FreeRTOSConfig.h  Hooks.c  IdleTask.c  OsTasks.cpp  Queues.cpp  Semphrs.cpp  TimerTask.c
Src/FreeRTOS_CLI/: Commands.c  Commands.cpp  Commands.h  Commands.hpp  FreeRTOS_CLI.c
Src/I2C/: I2C.cpp  I2C.hpp
Src/Interface/: RingBuffer.cpp  RingBuffer.hpp  UartDriver.cpp  UartDriver.hpp
Src/Legacy/DAC/: DacDriver.hpp
Src/Legacy/DFPlayer/: DFPlayer.cpp  DFPlayer.hpp
Src/Legacy/I2C/: I2C.hpp
Src/Legacy/Interface/: UartDriver.hpp
Src/Legacy/QSPI/: sin_table_gen.py  sine_table.c  sine_table.h
Src/QSPI/: QSPI.cpp  QSPI.hpp
Src/TempSens/: OW.cpp  OW.hpp
Src/lvgl_port/: lvgl_port_tft.c  lvgl_port_tft.h  lvgl_port_touchpad.c  lvgl_port_touchpad.h
eez-ui/: CMakeLists.txt  eez-sources.cmake  eez-ui.eez-project  eez-ui.eez-project-ui-state  gui.eez-project  gui.eez-project-ui-state
eez-ui/src/ui/: actions.c  actions.cpp  actions.h  fonts.h  images.c  images.h  screens.c  screens.h  styles.c  styles.h  ui.c  ui_con.c  ui_con.h  ui_font_gost_type_b_30.c  ui_image_lion.c  vars.c  vars.cpp  vars.h
toolchain/: gcc-arm-none-eabi.cmake  stm32f746nghx_flash.ld
